<resources>
    <string name="app_name">ReactiveRxTest</string>
    <string name="error_invalid_email">Error: Email Invalid</string>
    <string name="error_empty_input_password">Error: Password Field is Empty</string>
    <string name="error_password_too_long">Error: Password too long</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_welcome">Welcome to Profiler</string>
    <string name="prompt_email">E-Mail</string>
    <string name="prompt_password">Password</string>
    <string name="hint_email">email@example.com</string>
    <string name="hint_password">123456</string>
    <string name="action_signin">Sign In</string>
    <string name="action_register">Registor</string>
</resources>
